--- a/package.json
+++ b/package.json
@@ -14,22 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.592.0",
-    "aws-sdk": "^2.1637.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
-    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.1",
-    "method-override": "^3.0.0",
-    "mongoose": "^7.3.3",
-    "mongoose-gridfs": "^1.3.0",
-    "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2"
+    "mongoose": "^7.3.3"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
